applications/grafana/grafana.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: grafana
spec:
  ports:
    - port: 80
      targetPort: 3000
# ---
# apiVersion: v1
# kind: Endpoints
# metadata:
#   name: grafana
#   namespace: grafana
# subsets:
#   - addresses:
#       - ip: "192.168.2.254"
#     ports:
#       - port: 3000
