applications/grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: grafana
spec:
  parentRefs:
    - name: cloudflare-tunnel
      namespace: cloudflare-gateway
  hostnames:
    - monitoring.yeebs.dev
  rules:
    - backendRefs:
        - name: grafana
          port: 80
